# SenseiLua

./: README.md  pyproject.toml
sensei_lua/: __init__.py  __main__.py  analyzer.py
tests/: test_analyzer.py
